# tibia_wiki_extractor

./: .gitignore  README.md  exemple_00.py  main.py  pyproject.toml  testing.py
tibia_wiki_extractor/: extraction.py
tibia_wiki_extractor/database/: connector.py
tibia_wiki_extractor/database/tables/: armor.py  boot.py  helmet.py  legs.py  not_working_trinket.py  quiver.py  shield.py  spellbook.py
tibia_wiki_extractor/extractors/: armor_extractor.py  boot_extractor.py  helmet_extractor.py  legs_extractor.py  not_working_trinket_extractor.py  quiver_extractor.py  shield_extractor.py  spellbook_extractor.py
