[tool.poetry]
name = "web-scraping-parsel"
version = "0.1.0"
description = "Learning a bit of web scraping using parsel"
authors = ["Vinicius Saito Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
parsel = "^1.8.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
