[tool.poetry]
name = "tibia-wiki-extractor"
version = "0.1.0"
description = ""
authors = ["vsaito <viniciusaitosilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.8.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
